Fixed a vertical alignment of the window (mobile)

--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,9 @@ body {
     background: linear-gradient(83deg, rgba(65,65,63,1) 0%, rgba(80,65,41,1) 61%, rgba(86,85,85,1) 100%);
 }
 
-body, html, #root {
+html, body {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
 }
 
 :root {
@@ -20,10 +20,11 @@ body, html, #root {
 
 #app-container {
     width: 100vw;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 #binTable {
@@ -308,7 +309,6 @@ body, html, #root {
 
 #window {
     width: 860px;
-    min-height: 650px;
     margin: 0 auto;
     color: white;
     background: #282b28;
@@ -321,6 +321,7 @@ body, html, #root {
 
 #window__content-wrapper {
     padding: 10px 40px 10px 40px;
+    max-width: 100%;
 }
 
 #window__menubar {
@@ -346,16 +347,24 @@ body, html, #root {
 }
 
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 875px) {
     #window {
         width: 100%;
-        border: 0;
+        border: 0;  
+        display: flex;
+        align-items: center;
+        flex-grow: 1;
+    }
+
+    #window__menubar {
+        display:none;
     }
 
     #binTable-wrapper {
         overflow-x:scroll;
     }
 
+    
 }
 
 @media only screen and (max-width: 620px) {
